crates/turbomcp-wasm-macros/tests/compile_fail/server_on_struct.stderr
error: expected `impl`
 --> tests/compile_fail/server_on_struct.rs:6:1
  |
6 | struct NotAnImpl;
  | ^^^^^^
